--- a/public/styles.css
+++ b/public/styles.css
@@ -56,18 +56,18 @@ table td {
 form {
 	display: flex;
 	flex-direction: column;
+	border: 2px solid black;
+	background-color: rgb(128, 255, 0);
 }
 
 input[type=text] {
 	border-bottom: 2px solid red
 }
-input[type="radio"]{
-}
+
 .form {
 	/*weite des formular fenster*/
 	max-width: 300px;
-	border: 2px solid black;
-	background-color: rgba(255, 255, 234, 1);
+
 }
 
 textarea {
@@ -82,4 +82,34 @@ select {
 	background-color: #f1f1f1;
 }
 
+/*LogIn*/ 
+/* Set a style for all buttons */
 
+.LogIn {
+	display:flex;
+	flex-direction: inline;
+	padding: 5px;
+	margin:5px;
+	justify-content: center;
+	text-align: center;
+	
+	
+}
+
+button {
+  background-color: #04AA6D;
+  color: black;
+  padding: 4px 5px;
+  margin: 8px 0;
+  border: 1px black;
+  cursor: pointer;
+  width: 100%;
+  max-width: 100px;
+}
+button:hover{
+	opacity: 80%;
+}
+
+.LoginInner{
+	text-align: center;
+}
